@@ -1,4 +1,4 @@
-# $Id: rpmrc.in,v 2.18 2000/02/29 23:22:44 jbj Exp $
+# $Id: rpmrc.in,v 2.19 2000/03/17 21:04:50 jbj Exp $
 
 #############################################################
 
@@ -199,6 +199,8 @@ arch_compat: hades: m68kmint noarch
 arch_compat: i390: i370
 arch_compat: i370: noarch
 
+arch_compat: ia64: noarch
+
 os_compat:   IRIX64: IRIX
 os_compat: solaris2.7: solaris2.3 solaris2.4 solaris2.5 solaris2.6
 os_compat: solaris2.6: solaris2.3 solaris2.4 solaris2.5
@@ -254,6 +256,8 @@ buildarch_compat: falcon: m68kmint noarch
 buildarch_compat: atariclone: m68kmint noarch
 buildarch_compat: milan: m68kmint noarch
 buildarch_compat: hades: m68kmint noarch
+
+buildarch_compat: ia64: ia64 moarch
 
 macrofiles:	@RPMCONFIGDIR@/macros:@RPMCONFIGDIR@/%{_target}/macros:@SYSCONFIGDIR@/macros.specspo:@SYSCONFIGDIR@/macros:@SYSCONFIGDIR@/%{_target}/macros:~/.rpmmacros
 
